# Signal-Calling-Service

./: .dockerignore  .gitignore  BUILDING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: audit.toml
.github/config/: auto-assign.yml
.github/workflows/: ci.yml  docker.yml  reviewers.yml  security_audit.yml
backend/: Cargo.toml  Dockerfile  build.rs  docker-entrypoint.sh
backend/fuzz/: Cargo.toml  README.md
backend/fuzz/.cargo/: audit.toml
backend/fuzz/fuzz_targets/: dependency_descriptor.rs  googcc.rs  ice.rs  rtcp.rs  rtp.rs  transportcc.rs  vp8.rs
backend/fuzz/seeds/dtls/: certificate-with-prefixed-rng-seed
backend/fuzz/seeds/rtcp/: generic-feedback-nack  receiver-report  sdes  sender-report  specific-feedback-format-loss  specific-feedback-pli
backend/fuzz/seeds/rtp/: ext-dependency-descriptor  rtx-vp8  rtx-vp8-ext-tcc-seqnum
backend/protobuf/: group_call.proto
backend/src/: audio.rs  bitstream.rs  call.rs  call_lifecycle.rs  candidate_selector.rs  config.rs  connection.rs  endorsements.rs  frontend.rs  googcc.rs  http_server.rs  ice.rs  lib.rs  main.rs  metrics_server.rs  middleware.rs  pacer.rs  packet_server.rs  protos.rs  region.rs  rtp.rs  sfu.rs  signaling_server.rs  transportcc.rs  udp_server.rs  vp8.rs
backend/src/call/: approval_persistence.rs
backend/src/googcc/: ack_rates.rs  delay_directions.rs  feedback_rtts.rs  stream.rs
backend/src/googcc/delay_directions/: time_delta.rs
backend/src/metrics/: macros.rs
backend/src/packet_server/: epoll.rs  generic.rs
backend/src/rtp/: dependency_descriptor.rs  nack.rs  packet.rs  rtcp.rs  rtx.rs  srtp.rs  types.rs
backend/src/udp_server/: epoll.rs  generic.rs
common/: Cargo.toml
common/src/: call_ids.rs  client_status.rs  counters.rs  data_rate.rs  dynamic_config.rs  integers.rs  lib.rs  macros.rs  math.rs  serialize.rs  slice.rs  thread_pool.rs  time.rs
common/src/collections/: key_sorted_cache.rs  ring_buffer.rs  two_generation_cache.rs
docker/bootstrap/: Cargo.toml  Dockerfile
docker/bootstrap/src/: main.rs
frontend/: Cargo.toml  Dockerfile  docker-entrypoint.sh
frontend/src/: api.rs  authenticator.rs  backend.rs  cleaner.rs  config.rs  frontend.rs  gcp_apis.rs  internal_api.rs  lib.rs  load_balancer.rs  main.rs  metrics.rs  metrics_server.rs  storage.rs
frontend/src/api/: call_links.rs  v1.rs  v2.rs
frontend/src/metrics/: datadog_statsd.rs  histogram.rs  macros.rs  reporter.rs  test_utils.rs  timing_options.rs
fuzz/: .gitattributes  Cargo.toml
fuzz/fuzz_targets/: dtls-server-private-key.der  dtls.rs  ice.rs  rtcp.rs  rtp.rs  transportcc.rs  vp8.rs
fuzz/seeds/dtls/: hello-with-prefixed-rng-seed
fuzz/seeds/rtcp/: bye  generic-feedback-transportcc
fuzz/seeds/rtp/: ext-audio-level  ext-tcc-seqnum
load_test/: Cargo.toml  README.md
load_test/src/: main.rs
metrics/: Cargo.toml
metrics/src/: datadog_statsd.rs  histogram.rs  lib.rs  macros.rs  reporter.rs  tags.rs  test_utils.rs
protobuf/: group_call.proto
src/: audio.rs  call.rs  common.rs  config.rs  connection.rs  dtls.rs  googcc.rs  http_server.rs  ice.rs  lib.rs  main.rs  metrics.rs  metrics_server.rs  pacer.rs  protos.rs  rtp.rs  sfu.rs  signaling_server.rs  transportcc.rs  udp_server.rs  vp8.rs
src/common/: bits.rs  bytes_reader.rs  collections.rs  data_rate.rs  integers.rs  math.rs  serialize.rs  thread_pool.rs  time.rs
src/common/collections/: key_sorted_cache.rs  ring_buffer.rs  two_generation_cache.rs
src/googcc/: ack_rates.rs  delay_directions.rs  feedback_rtts.rs
src/googcc/delay_directions/: time_delta.rs
src/metrics/: datadog_statsd.rs  histogram.rs  macros.rs  reporter.rs  test_utils.rs  timing_options.rs
src/udp_server/: epoll.rs  generic.rs
