#
# Copyright 2019-2022 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[workspace]
resolver = "2"
members = [
    "backend",
    "common",
    "docker/bootstrap",
    "frontend",
    "metrics",
]

[workspace.package]
version = "121.0.0"
edition = "2021"

[profile.release]
debug = 1
panic = "abort"
lto = "fat"
codegen-units = 1

[patch.crates-io]
# Use our fork of curve25519-dalek because we're using zkgroup.
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
