#
# Copyright 2019-2022 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "calling_backend"
version.workspace = true
authors = ["Calling Team <callingteam@signal.org>"]
edition = "2021"
description = "Media forwarding server for group calls."
license = "AGPL-3.0-only"

[dependencies]
mrp = { git = "https://github.com/signalapp/ringrtc", tag = "v2.43.0" }
calling_common = { path = "../common" }

# For error handling
anyhow = "1.0.86"
thiserror = "1.0.62"
scopeguard = "1.2.0"

# For logging and command line operations
log = "0.4.22"
env_logger = "0.11.3"
clap = { version = "4.5.9", features = ["derive"] }

# For runtime and threading
tokio = { version = "1.38.0", features = ["full"] }
parking_lot = "0.12.3"
once_cell = "1.19.0"
futures = "0.3.30"
num_cpus = "1.16.0"
async-trait = "0.1.81"

# For http
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", default-features = false, features = ["typed-header", "tracing"] }
hyper = { version = "1.4.1", features = ["full"] }
reqwest = { version = "0.12.6", default-features = false, features = ["json"] }
tower = "0.4.13"

# For general conversions
base64 = "0.22.1"
byteorder = "1.5.0"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_with = { version = "3.9.0", features = ["base64"] }
prost = "0.12.6"
strum = "0.26.3"
strum_macros = "0.26.4"

# For common
sha2 = "0.10.8"

# For ICE
crc = "3.2.1"
hmac = "0.12.1"
sha-1 = "0.10.1"

# For metrics
rand = "0.8.5"

# For SRTP key derivation using DHE
hkdf = "0.12.4"
rand_core = { version = "0.6.4", features = [] }
x25519-dalek = { version = "2.0.1" }

# For (S)RTP
aes = "0.8.4"
aes-gcm = "0.10.3"
zeroize = "1.8.1"

# For congestion control
async-stream = "0.3.5"
# For congestion-control-specific helpers
pin-project = "1.1.5"

# For low-level UDP sockets and tracking TCP sockets
nix = { version = "0.26.4", optional = true }
unique_id = "0.1.5"

# For current process memory stats
psutil = { version = "3.3.0", default-features = false, features = ["cpu", "process"] }

# For TLS sockets in epoll backend
rustls = "0.23.12"
rustls-pemfile = "2.1.3"

[target.'cfg(target_os="linux")'.dependencies]
# Only currently needed for metrics (won't build on mac, see https://github.com/rust-lang/rust/issues/115149).
accounting-allocator = "0.2.0"

[build-dependencies]
prost-build = "0.12.6"

[dev-dependencies]
http = "1.1.0"
hex-literal = "0.4.1"
unzip3 = "1.0.0"

# For simulating passage of time in timing tests
mock_instant = { version = "0.3.2" }
tokio = { version = "1.38.0", features = ["test-util"] }

# For matching WebRTC's randomness
rand_distr = "0.4.3"

[features]
default = ["epoll"]
epoll = ["nix"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
