#
# Copyright 2019-2022 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "calling_backend"
version.workspace = true
authors = ["Calling Team <callingteam@signal.org>"]
edition = "2021"
description = "Media forwarding server for group calls."
license = "AGPL-3.0-only"

[dependencies]
mrp = { git = "https://github.com/signalapp/ringrtc", tag = "v2.49.5" }
calling_common = { path = "../common" }
metrics = { path = "../metrics" }

partial-default = { version = "0.1.0", features = ["derive"] }

# For error handling
anyhow = "1.0.97"
thiserror = "2.0.12"

# For logging and command line operations
log = "0.4.26"
env_logger = "0.11.7"
clap = { version = "4.5.31", features = ["derive"] }

# For runtime and threading
tokio = { version = "1.44.0", features = ["full"] }
parking_lot = {  version = "0.12.3", features = ["deadlock_detection"] }
once_cell = "1.21.0"
futures = "0.3.31"
num_cpus = "1.16.0"
async-trait = "0.1.87"

# For http
axum = { version = "0.7.9" }
axum-extra = { version = "0.9.6", default-features = false, features = ["typed-header", "tracing"] }
hyper = { version = "1.6.0", features = ["full"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
tower = "0.5.2"

# For general conversions
byteorder = "1.5.0"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["base64"] }
prost = "0.13.5"
strum = "0.26.3"
strum_macros = "0.26.4"

# For common
sha2 = "0.10.8"

# For ICE
crc = "3.2.1"
hmac = "0.12.1"
sha-1 = "0.10.1"

# For SRTP key derivation using DHE
hkdf = "0.12.4"
rand = "0.8.5"
x25519-dalek = { version = "2.0.1" }

# For (S)RTP
aes = "0.8.4"
aes-gcm = "0.10.3"
zeroize = "1.8.1"

# For congestion control
async-stream = "0.3.6"
# For congestion-control-specific helpers
pin-project = "1.1.10"

# For low-level UDP sockets and tracking TCP sockets
nix = { version = "0.27.1", optional = true, features = ["time", "socket", "event", "signal", "net"] }
unique_id = "0.1.5"

# For current process memory stats
psutil = { version = "3.3.0", default-features = false, features = ["cpu", "process"] }

# For TLS sockets in epoll backend
rustls = "0.23.23"
rustls-pemfile = "2.2.0"

[target.'cfg(target_os="linux")'.dependencies]
# Only currently needed for metrics (won't build on mac, see https://github.com/rust-lang/rust/issues/115149).
accounting-allocator = "0.2.0"

[build-dependencies]
prost-build = "0.13.5"

[dev-dependencies]
http = "1.2.0"
hex-literal = "0.4.1"
unzip3 = "1.0.0"

tokio = { version = "1.44.0", features = ["test-util"] }

# For matching WebRTC's randomness
rand_distr = "0.4.3"

[features]
default = ["epoll"]
epoll = ["nix"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
