#
# Copyright 2019-2021 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "calling_common"
version = "0.0.0"
authors = ["Calling Team <callingteam@signal.org>"]
edition = "2021"
description = "Common calling library."
license = "AGPL-3.0-only"

[features]
dynamic_config = [
    "dep:chrono",
    "dep:object_store",
    "dep:serde_with",
    "dep:serde_yaml",
    "dep:tokio",
]

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
sha2 = "0.10.8"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.6"

# dynamic config dependencies
chrono = { version = "0.4.38", optional = true }
object_store = { version = "0.11.1", optional = true, features = ["gcp"] }
serde_with = { version = "3.9.0", features = ["base64"], optional = true }
serde_yaml = {  version = "0.9.34+deprecated", optional = true }
tokio = { version = "1.38.0", features = ["sync", "signal"], optional = true }

[dev-dependencies]
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.4.1"
mockall = "0.12.1"
once_cell = "1.19.0"
