#
# Copyright 2022 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "calling_frontend"
version.workspace = true
authors = ["Calling Team <callingteam@signal.org>"]
edition = "2021"
description = "Frontend server for group calls."
license = "AGPL-3.0-only"

[dependencies]
calling_common = { path = "../common" }

# For error handling
anyhow = "1.0.86"
thiserror = "1.0.62"

# For logging and command line operations
log = "0.4.22"
env_logger = "0.11.3"
clap = { version = "4.5.9", features = ["derive"] }

# For runtime and threading
tokio = { version = "1.38.0", features = ["rt-multi-thread", "signal", "macros"] }
once_cell = "1.19.0"
futures = "0.3.30"
async-trait = "0.1.81"

# For general conversions
base64 = "0.22.1"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_with = { version = "3.9.0", features = ["base64"] }
urlencoding = "2.1.3"

# For common and authentication
rand = "0.8.5"
sha2 = "0.10.8"
hmac = "0.12.1"
subtle = "2.6.1"

# For http client and server
hyper = { version = "0.14.30", features = ["full"] }
hyper-rustls = { version = "0.24.2", features = ["webpki-roots"] }
axum = { version = "0.6.20", features = ["headers"] }
tower = "0.4.13"
mime = "0.3.17"
http = "0.2.12"

# For storage access to DynamoDB
aws-types = "1.3.3"
aws-credential-types = { version = "1.2.0", features = [
  "hardcoded-credentials",
] }
aws-smithy-types = "1.2.0"
aws-smithy-async = "1.2.1"
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.38.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }

# For metrics
parking_lot = "0.12.3"
psutil = { version = "3.3.0", default-features = false, features = ["process"] }

# For the call link credentials
bincode = "1.3.3"
zkgroup = { git = "https://github.com/signalapp/libsignal", tag = "v0.52.0" }

[dev-dependencies]
libsignal-core = { git = "https://github.com/signalapp/libsignal", tag = "v0.52.0" }
mockall = "0.12.1"
mock_instant = { version = "0.3.2" }
lazy_static = "1.5.0"

[features]
testing = []
storage-tests = []
