#
# Copyright 2022 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "calling_frontend"
version.workspace = true
authors = ["Calling Team <callingteam@signal.org>"]
edition = "2021"
description = "Frontend server for group calls."
license = "AGPL-3.0-only"

[dependencies]
calling_common = { path = "../common" }
metrics = { path = "../metrics" }

# For error handling
anyhow = "1.0.94"
thiserror = "2.0.6"

# For logging and command line operations
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.23", features = ["derive"] }

# For runtime and threading
tokio = { version = "1.42.0", features = ["rt-multi-thread", "signal", "macros"] }
once_cell = "1.20.2"
futures = "0.3.31"
async-trait = "0.1.83"

# For general conversions
base64 = "0.22.1"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["base64"] }
urlencoding = "2.1.3"

# For common and authentication
rand = "0.8.5"
sha2 = "0.10.8"
hmac = "0.12.1"
subtle = "2.6.1"

# For http client and server
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", default-features = false, features = ["typed-header", "tracing"] }
tower = { version = "0.5.1" , features = ["util"]}
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
mime = "0.3.17"
http = "1.2.0"

# For storage access to DynamoDB
aws-types = "1.3.3"
aws-credential-types = { version = "1.2.1", features = [
  "hardcoded-credentials",
] }
aws-smithy-types = "1.2.9"
aws-smithy-async = "1.2.1"
aws-config = "1.5.10"
aws-sdk-dynamodb = "1.55.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }

# For metrics
parking_lot = "0.12.3"
psutil = { version = "3.3.0", default-features = false, features = ["process"] }

# For the call link credentials
bincode = "1.3.3"
zkgroup = { git = "https://github.com/signalapp/libsignal", tag = "v0.64.1" }

[dev-dependencies]
libsignal-core = { git = "https://github.com/signalapp/libsignal", tag = "v0.64.1" }
mockall = "0.13.1"
lazy_static = "1.5.0"

[features]
testing = []
storage-tests = []
